--- a/gta/index.html
+++ b/gta/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Restaurant Inventory Management</title>
-    <link rel="stylesheet" href="gta.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
@@ -92,6 +92,6 @@
         </div>
     </div>
 
-    <script src="gta.java"></script>
+    <script src="script.js"></script>
 </body>
 </html>
